--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -6,7 +6,7 @@
     <h1>Your To-Do list</h1>
 
     <form method="POST" action="/lists/{{ list.id }}/add_item">
-      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" autofocus />
       {% csrf_token %}
     </form>
 
