update List view/model to validate against blank to-dos

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -27,6 +27,11 @@
                 autofocus
                 />
               {% csrf_token %}
+              {% if error %}
+                <div class="form-group has-error">
+                  <span class="help-block">{{ error }}</span>
+                </div
+              {% endif %}
             </form>
           </div>
         </div>
