--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -39,6 +39,14 @@
       </div>
 
     </div>
+
+    <script src="/static/jquery-3.6.0.js"></script>
+    <script src="/static/list.js"></script>
+
+    <script>
+      initialize();
+    </script
+
   </body>
 
 </html>
