--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <script src="/static/jquery-3.6.0.js"></script>
+    <script src="/static/jquery-3.6.0.min.js"></script>
     <script src="/static/list.js"></script>
 
     <script>
